--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
 _site
+
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+
+pids
+logs
+results
+
+npm-debug.log
+node_modules
+
+bower_components
