--- a/package.json
+++ b/package.json
@@ -13,30 +13,26 @@
     "url": "https://github.com/trevorsenior/snoocore/issues"
   },
   "dependencies": {
-    "superagent": "~0.16.0",
     "reddit-api-generator": "0.0.9",
+    "superagent": "~0.16.0",
     "when": "^2.8.0"
   },
   "devDependencies": {
-    "express": "~3.4.8",
-    "open": "0.0.4",
     "browserify": "~3.24.1",
     "chai": "^1.9.0",
     "chai-as-promised": "~4.1.0",
-    "mocha": "^1.17.1",
-    "mocha-as-promised": "~2.0.0",
-    "main": "0.0.23",
-    "karma-script-launcher": "^0.1.0",
+    "mocha": "^1.19.0",
+    "karma": "^0.10.9",
     "karma-chrome-launcher": "^0.1.2",
+    "karma-coffee-preprocessor": "^0.1.3",
     "karma-firefox-launcher": "^0.1.3",
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.1.5",
-    "karma-coffee-preprocessor": "^0.1.3",
-    "requirejs": "^2.1.11",
-    "karma-requirejs": "^0.2.1",
+    "karma-mocha": "^0.1.1",
     "karma-phantomjs-launcher": "^0.1.2",
-    "karma": "^0.10.9",
-    "karma-mocha": "^0.1.1"
+    "karma-requirejs": "^0.2.1",
+    "karma-script-launcher": "^0.1.0",
+    "open": "0.0.4"
   },
   "directories": {
     "test": "test"
