--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
   },
   "devDependencies": {
     "browserify": "~3.24.1",
-    "chai": "^1.9.0",
-    "chai-as-promised": "~4.1.0",
-    "mocha": "^1.19.0",
+    "chai-as-promised": "^4.1.1",
     "karma": "^0.10.9",
     "karma-chrome-launcher": "^0.1.2",
     "karma-coffee-preprocessor": "^0.1.3",
@@ -32,6 +30,7 @@
     "karma-phantomjs-launcher": "^0.1.2",
     "karma-requirejs": "^0.2.1",
     "karma-script-launcher": "^0.1.0",
+    "mocha": "^1.19.0",
     "open": "0.0.4"
   },
   "directories": {
