--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "lodash": "^2.4.1",
     "reddit-api-generator": "2.0.0",
+    "superagent": "^0.20.0",
     "when": "^3.4.3"
   },
   "devDependencies": {
