--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "when": "^3.6.3"
   },
   "devDependencies": {
-    "browserify": "~3.24.1",
+    "browserify": "^6.3.3",
+    "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
-    "karma": "^0.12.24",
+    "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
-    "mocha": "^1.19.0",
-    "open": "0.0.4"
+    "mocha": "^2.0.1",
+    "open": "0.0.5"
   },
   "directories": {
     "test": "test"
