--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snoocore",
-  "version": "2.0.1",
+  "version": "2.0.2",
   "description": "A minimal and complete JavaScript driver for the Reddit API.",
   "main": "Snoocore.js",
   "repository": {
@@ -24,6 +24,7 @@
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
+    "karma-safari-launcher": "^0.1.1",
     "mocha": "^2.0.1",
     "open": "0.0.5",
     "snooform": "0.1.0"
