--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "^0.1.1",
     "mocha": "^2.0.1",
-    "open": "0.0.5",
+    "phantom": "^0.7.2",
     "snooform": "0.1.0"
   },
   "directories": {
