--- a/package.json
+++ b/package.json
@@ -17,9 +17,17 @@
     "when": "^3.6.3"
   },
   "devDependencies": {
+    "babel": "^5.0.7",
+    "babelify": "^6.0.1",
     "browserify": "^6.3.3",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
+    "gulp": "^3.8.11",
+    "gulp-babel": "^5.0.0",
+    "gulp-concat": "^2.5.2",
+    "gulp-sourcemaps": "^1.5.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-util": "^3.0.4",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
@@ -29,7 +37,8 @@
     "mocha": "^2.1.0",
     "phantom": "^0.7.2",
     "snooform": "0.1.0",
-    "toml": "^2.1.1"
+    "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0"
   },
   "directories": {
     "test": "test"
@@ -42,6 +51,6 @@
     "client"
   ],
   "scripts": {
-    "test": "./run.js mocha"
+    "test": "./node_modules/.bin/gulp mocha"
   }
 }
