--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "browserify": "^6.3.3",
     "chai": "^1.10.0",
     "chai-as-promised": "^4.1.1",
+    "coveralls": "^2.11.2",
     "gulp": "^3.8.11",
     "gulp-babel": "^5.0.0",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-uglify": "^1.1.0",
     "gulp-util": "^3.0.4",
+    "istanbul": "^0.3.13",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.5",
     "karma-firefox-launcher": "^0.1.3",
@@ -54,5 +56,7 @@
   },
   "browser": {
     "./src/https/httpsNode.js": "./src/https/httpsBrowser.js"
+  },
+  "config": {
   }
 }
