--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ results
 # building the browser version in the `dist` folder
 build
 
+# Ignore user test configuration
+test/config.js
+
 npm-debug.log
 node_modules
 
