--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: node_js
 node_js:
   - "0.12"
-script: ./node_modules/.bin/gulp buildNode && NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec build/test/node-tests.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
+before_script:
+  - ./node_modules/.bin/gulp buildNode
+script: NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec ./build/test/node-tests.js && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+after_script:
+  - rm -rf ./coverage
