--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "istanbul": "^0.3.13",
     "karma": "^0.12.28",
     "karma-chrome-launcher": "^0.1.5",
+    "karma-env": "^0.1.0",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.9",
     "karma-phantomjs-launcher": "^0.1.4",
@@ -52,9 +53,5 @@
   "scripts": {
     "test": "./node_modules/.bin/gulp mocha",
     "karma": "./node_modules/.bin/gulp karma"
-  },
-  "browser": {
-    "./src/https/httpsNode.js": "./src/https/httpsBrowser.js"
-  },
-  "config": {}
+  }
 }
