--- a/test/config.js.template
+++ b/test/config.js.template
@@ -1,22 +1,30 @@
 /*
 
-MAKE A COPY OF THIS FILE AND SAVE IT AS `config.js`
-IN THIS DIRECTORY TO RUN TESTS.
+   MAKE A COPY OF THIS FILE AND SAVE IT AS `config.js`
+   IN THIS DIRECTORY TO RUN TESTS.
 
-Set the environment variables if you do not wish to
-edit this file directly.
+   Set the environment variables if you do not wish to
+   edit this file directly.
 
-*/
+ */
+
+// get the environment variable requested. Accounts for node.js
+// vs. browser when fetcheng environment variables.
+// See karma-env for how the env variables are exposed to karma tests
+function getEnv(str) {
+  return (typeof window !== 'undefined') ? window.__env[str] : process.env[str];
+}
+
 export default {
 
   testTimeout: 60000, // 1 minute per test before they time out
 
   testServer: {
     // Must match your redirect uri's port
-    standardPort: process.env.REDDIT_TEST_SERVER_PORT || 3000,
+    standardPort: getEnv('REDDIT_TEST_SERVER_PORT') || 3000,
     // No need to change this one - internally used to test
     // HTTP 500 error codes
-    serverErrorPort: process.env.REDDIT_ERROR_SERVER_PORT || 3001
+    serverErrorPort: getEnv('REDDIT_ERROR_SERVER_PORT') || 3001
   },
 
   // What servers to make requests with to the API
@@ -28,32 +36,32 @@ export default {
   reddit: {
     // Must have same port as testServer
     // All app-types *must* use the same redirect uri
-    redirectUri: process.env.REDDIT_REDIRECT_URI || "https://localhost:3000",
+    redirectUri: getEnv('REDDIT_REDIRECT_URI') || "https://localhost:3000",
 
     // What subreddit to run our test cases in
     testSubreddit: 'snoocoreTest',
 
     // Basic username / password for a reddit user
     login: {
-      username: process.env.REDDIT_USERNAME || "",
-      password: process.env.REDDIT_PASSWORD || ""
+      username: getEnv('REDDIT_USERNAME') || "",
+      password: getEnv('REDDIT_PASSWORD') || ""
     },
 
     // The information for your app of type `web`
     web: {
-      key: process.env.REDDIT_WEB_KEY || "",
-      secret: process.env.REDDIT_WEB_SECRET || ""
+      key: getEnv('REDDIT_WEB_KEY') || "",
+      secret: getEnv('REDDIT_WEB_SECRET') || ""
     },
 
     // The information for your app of type `istalled`
     installed: {
-      key: process.env.REDDIT_INSTALLED_KEY || ""
+      key: getEnv('REDDIT_INSTALLED_KEY') || ""
     },
 
     // The information for your app of type `script`
     script: {
-      key: process.env.REDDIT_SCRIPT_KEY || "",
-      secret: process.env.REDDIT_SCRIPT_SECRET || ""
+      key: getEnv('REDDIT_SCRIPT_KEY') || "",
+      secret: getEnv('REDDIT_SCRIPT_SECRET') || ""
     }
 
   }
