--- a/package.json
+++ b/package.json
@@ -29,10 +29,11 @@
     "gulp-util": "^3.0.4",
     "istanbul": "^0.3.13",
     "karma": "^0.12.28",
-    "karma-chrome-launcher": "^0.1.5",
+    "karma-chrome-launcher": "^0.1.8",
     "karma-env": "^0.1.0",
     "karma-firefox-launcher": "^0.1.3",
     "karma-mocha": "^0.1.9",
+    "karma-mocha-reporter": "^1.0.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "karma-safari-launcher": "^0.1.1",
     "mocha": "^2.1.0",
